# tetris-IA

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  main.py  package.json  requirements.txt  vcpkg.json
css/: styles.css
include/graficos/: Boton.h  InterfazUsuario.h  Renderizador.h  VisualizadorRed.h
include/ia/: Agente.h  AlgoritmoGenetico.h  Entrenador.h  RedNeuronal.h
include/juego/: Constantes.h  Pieza.h  Tablero.h  Tetris.h
include/modos/: ModoEntrenamiento.h  ModoIAEntrenada.h  ModoJuego.h  ModoNormal.h
include/nucleo/: Aplicacion.h  Configuracion.h  GestorModelos.h
models/: README.md
results/: README.md
src/: __init__.py  main.cpp  main.js
src/ai/: __init__.py  agent.js  auto-tuner.js  features.js  fitness.js  ga.js  genome.js  model-io.js  move-enumerator.js  network.js  tetris_ai.py  trainer.py  training.py
src/core/: config.js  event-emitter.js  rng.js
src/game/: __init__.py  bag.js  board.js  constants.js  game.js  pieces.js  scoring.js  srs.js  tetris_game.py  tetris_ui.py
src/graficos/: Boton.cpp  InterfazUsuario.cpp  Renderizador.cpp  VisualizadorRed.cpp
src/ia/: Agente.cpp  AlgoritmoGenetico.cpp  Entrenador.cpp  RedNeuronal.cu
src/juego/: Pieza.cpp  Tablero.cpp  Tetris.cpp
src/modes/: menu-scene.js  play-scene.js  scene-manager.js  settings-scene.js  training-scene.js  watch-scene.js
src/modos/: ModoEntrenamiento.cpp  ModoIAEntrenada.cpp  ModoNormal.cpp
src/nucleo/: Aplicacion.cpp  Configuracion.cpp  GestorModelos.cpp
src/storage/: db.js  file-io.js  model-store.js  settings-store.js
src/ui/: audio.js  board-renderer.js  charts.js  dom.js  grid-renderer.js  keyboard.js  nn-viz.js  particles.js  strings.es.js
src/visualization/: __init__.py  tetris_ai_viewer.py  training_visualizer.py
src/workers/: sim-worker.js  worker-pool.js
tests/: bag.test.js  board.test.js  features.test.js  ga.test.js  game.test.js  index.js  integration.test.js  network.test.js  rng.test.js  scoring.test.js  srs.test.js
tools/: serve.js  smoke.js  train-smoke.js
